RESOLVED FIXED35807
Child clipping compositing layers don't show the blue debug color
https://bugs.webkit.org/show_bug.cgi?id=35807
Summary Child clipping compositing layers don't show the blue debug color
Simon Fraser (smfr)
Reported 2010-03-05 13:48:47 PST
With debug borders turned on, layers that clip show in a pale blue color so you can see them. However, child clipping layers don't show this color, because they have no layer owner, so they can't get to the debug settings.
Attachments
Patch (1.30 KB, patch)
2010-03-05 13:49 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-03-05 13:49:50 PST
Simon Fraser (smfr)
Comment 2 2010-03-05 14:44:15 PST
Simon Fraser (smfr)
Comment 3 2010-03-05 14:46:41 PST
Note You need to log in before you can comment on or make changes to this bug.