2010-03-05  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Child clipping compositing layers don't show the blue debug color
        https://bugs.webkit.org/show_bug.cgi?id=35807

        Set a layer owner on the GraphicsLayers created for clipping children,
        so that they can get to the debug settings that give them the blue color.

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::updateClippingLayers):

Canonical link: https://commits.webkit.org/46892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55595 268f45cc-cd09-0410-ab3c-d52691b4dbfc